--- a/NHS_R_NHS_Pycom_Oct23/NHS_R_Pycom_2023_Quarto_website_in_GitHub.html
+++ b/NHS_R_NHS_Pycom_Oct23/NHS_R_Pycom_2023_Quarto_website_in_GitHub.html
@@ -387,9 +387,9 @@ Pablo Leon-Rodenas
 <p>It will host our website. Name this repo as your repository followed by github.io as this is a website.</p>
 <div class="columns">
 <div class="column" style="width:40%;">
-<p><img data-src="NHSR_Pycon_images/03_Step_02_new%20github_repo_%20website.png"></p>
+<p><img data-src="NHSR_Pycon_images/03_Step_02_new_github_repo_%20website.png"></p>
 </div><div class="column" style="width:60%;">
-<p><img data-src="NHSR_Pycon_images/04_Step_02_New_%20repo_%20website_name.png"></p>
+<p><img data-src="NHSR_Pycon_images/04_Step_02_New_repo_website_name.png"></p>
 <p><img data-src="NHSR_Pycon_images/05_Step_02_website_repo_created.png"></p>
 </div>
 </div>
@@ -405,7 +405,7 @@ Pablo Leon-Rodenas
 <li><p>Containing new Quarto Website project.</p></li>
 </ul>
 </div><div class="column" style="width:60%;">
-<p><img data-src="NHSR_Pycon_images/07_Step_03_create%20project_01.png"> <img data-src="NHSR_Pycon_images/08_Step_03_create%20project_02.png"></p>
+<p><img data-src="NHSR_Pycon_images/07_Step_03_create_project_01.png"> <img data-src="NHSR_Pycon_images/08_Step_03_create_project_02.png"></p>
 </div>
 </div>
 </section>
@@ -414,7 +414,7 @@ Pablo Leon-Rodenas
 <p>We setup the Quarto website using the <strong>repository name</strong> we created at the start “Pablo-tester.github.io”. This is required for the website to be rendered in GitHub.</p>
 <div class="columns">
 <div class="column" style="width:40%;">
-<p><img data-src="NHSR_Pycon_images/09_Step_05_Create_quarto_website%2001.png"></p>
+<p><img data-src="NHSR_Pycon_images/09_Step_05_Create_quarto_website_01.png"></p>
 </div><div class="column" style="width:60%;">
 <p><img data-src="NHSR_Pycon_images/10_Step_05_Create_quarto_website_02.png"></p>
 </div>
@@ -430,7 +430,8 @@ Pablo Leon-Rodenas
 <p>Click on “Create Project” to open the Quarto Website project. Website files included inside new folder “Pablo-tester.github.io”</p>
 <div class="columns">
 <div class="column" style="width:40%;">
-<p><img data-src="NHSR_Pycon_images/11_Step_05_cuarto_website_files_01.png"> It that will be populated with the following Quarto related files: - quarto.yml</p>
+<p><img data-src="NHSR_Pycon_images/11_Step_05_cuarto_website_files_01.png"></p>
+<p>It that will be populated with the following Quarto related files: - quarto.yml</p>
 <ul>
 <li><p>.gitignore</p></li>
 <li><p>about.qmd</p></li>
